# remake_mp2_lab1

./: .gitignore  CMakeLists.txt  main.cpp
inc/: tbitfield.h  tset.h
src/: tbitfield.cpp  tset.cpp
test/: test_tbitfield.cpp  test_tset.cpp
